# ic-canister-template

./: Cargo.toml  README.md
.github/workflows/: ci.yml
integration-tests/: Cargo.toml
integration-tests/src/: pocket_ic.rs
integration-tests/tests/pocket_ic/: hello_world.rs  mod.rs
just/: test.just
